--- a/contacts.html
+++ b/contacts.html
@@ -20,6 +20,8 @@
     <link rel="stylesheet" href="kanban_assets/kanban_css/task-info.css">
     <link rel="stylesheet" href="kanban_assets/kanban_css/custom-select.css">
 
+    <link rel="shortcut icon" href="kanban_img/login_icons/join_blue.png" type="image/x-icon">
+
     <style>
         @media (max-width: 874px) {
             .contact-information-edit-container {
@@ -75,19 +77,13 @@
             <div class="info">
                 <p class="name">Kanban Project Management Tool</p>
                 <a class="help-btn-container" href="kanban_assets/help.html"><img class="help" src="kanban_img/small_navbar_icons/help.png"></a>
-                <div class="user-logout-icon-container"></div>
+                <div class="user-logout-icon-container">
+
+                </div>
             </div>
         </div>
 
-        <div class="logout d-none">
-            <span onclick="logout()" class="light-blue-text">Log out</span>
-        </div>
-
-        <div class="logout-mobile d-none">
-            <a href="kanban_assets/help.html" class="light-blue-text">Help</a>
-            <a href="kanban_assets/legal_notice.html" class="light-blue-text">Legal Notice</a>
-            <a onclick="logout()" class="light-blue-text">Log out</a>
-        </div>
+        
     </nav>
 
     
