--- a/login.html
+++ b/login.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="login_assets/login_css/generalForm.css">
     <link rel="stylesheet" href="login_assets/login_css/fonts.css">
     <link rel="stylesheet" href="login_assets/login_css/login.css">
+    <link rel="shortcut icon" href="kanban_img/login_icons/join_blue.png" type="image/x-icon">
 
     <script src="js/request.js" defer></script>
     <script src="js/template.js" defer></script>
