help and legal notice

--- a/kanban_assets/help.html
+++ b/kanban_assets/help.html
@@ -78,16 +78,32 @@
                 <div class="help-arrow-container">
                     <a href="../summary.html"><img class="arrow" src="../kanban_img/arrow_icons/blue_arrow.png"></a>
                 </div>
-                <h1 id="help-headline">Help</h1>
-                <div>
-                    <h3 class="subtitles">What is Join</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolores esse cumque possimus dolorum adipisci nobis incidunt dolore tempora molestias, debitis ad mollitia, eos aperiam velit, reprehenderit sit aspernatur eum autem!</p>
+
+                <div class="main-field">
+                    <h1>Help</h1>
+                    <h2>What is Join?</h2>
+                    <p>
+                        Join is a classical task management tool with a kanban-board. You can organize your tasks whithin a project or business processes. It is perfectly suitable for working together with your team. Join let you and your team work more efficiently. You have all of your taks in focus und
+                        won't miss upcoming deadlines anymore. Start working with Join now!
+                    </p>
+                    <h2>How to use it</h2>
+                    <table>
+                        <tr>
+                            <td class="help-number">1.</td>
+                            <td>Add a task with title, description and category. Assign the task to other team members of your contact list or invite new contacts.</td>
+                        </tr>
+                        <tr>
+                            <td class="help-number">2.</td>
+                            <td>Check the current status of your tasks in the kanban-board. You can drag and drop your task to change the status. Also it is possible to edit the task details.</td>
+                        </tr>
+                        <tr>
+                            <td class="help-number">3.</td>
+                            <td>Add team members to your contact list to communicate to them fastly. Also you can assign tasks directly to your contacts.</td>
+                        </tr>
+                    </table>
                 </div>
 
-                <div>
-                    <h3 class="subtitles">How to use it</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Adipisci, harum saepe. Nulla pariatur quibusdam ut nisi magnam quasi maiores neque impedit illum atque? Vitae aspernatur provident atque praesentium, cupiditate obcaecati.</p>
-                </div>
+
             </div>
         </div>
     </main>
