helt text changed

--- a/kanban_assets/help.html
+++ b/kanban_assets/help.html
@@ -83,8 +83,8 @@
                     <h1>Help</h1>
                     <h2>What is Join?</h2>
                     <p>
-                        Join is a classical task management tool with a kanban-board. You can organize your tasks whithin a project or business processes. It is perfectly suitable for working together with your team. Join let you and your team work more efficiently. You have all of your taks in focus und
-                        won't miss upcoming deadlines anymore. Start working with Join now!
+                        Join is a  project  management tool by Emir Salihovic and Alexander Much with a kanban-board. You can organize your tasks whithin a project or business processes. It is perfectly suitable for working together with your team. Join let you and your team work more efficiently. You have all of your taks in focus und
+                        won't miss upcoming deadlines anymore.
                     </p>
                     <h2>How to use it</h2>
                     <table>
