finish edit task and clean code

--- a/login_assets/forgotPassword.html
+++ b/login_assets/forgotPassword.html
@@ -19,7 +19,7 @@
 </head>
 
 <body>
-    <!-- <div class="white-overlay"> -->
+    <div class="white-overlay">
         <nav class="navbar">
             <div>
                 <a class="logo" href="../login.html"><img src="../kanban_img/login_icons/join_white.png"></a>
@@ -49,11 +49,11 @@
                 </div>
             </div>
         </div>
+    </div>
 
-        <div id="forgotPassword-popup" class="popups centered">
-            An email has been sent to you  <img class="popups-img" src="../kanban_img/SendCheck.svg">
-        </div>
-    <!-- </div> -->
+    <div id="forgotPassword-popup" class="popups centered">
+        An email has been sent to you  <img class="popups-img" src="../kanban_img/SendCheck.svg">
+    </div>
 </body>
 
 </html>
