--- a/login_assets/resetPassword.html
+++ b/login_assets/resetPassword.html
@@ -18,7 +18,7 @@
 </head>
 
 <body>
-    <!-- <div class="white-overlay"> -->
+    <div class="white-overlay">
         <nav class="navbar">
             <div class="logo">
                 <img src="../kanban_img/login_icons/join_white.png">
@@ -49,11 +49,12 @@
                 </div>
             </div>
         </div>
+    </div>
 
-        <div id="resetPassword-popup" class="popups centered">
-            You reset your password
-        </div>
-    <!-- </div> -->
+    <div id="resetPassword-popup" class="popups centered">
+        You reset your password
+    </div>
+    
 </body>
 
 </html>
