--- a/login_assets/forgotPassword.html
+++ b/login_assets/forgotPassword.html
@@ -35,11 +35,11 @@
                 <div class="form-inner-container">
                     <h1 class="form-headline">I forgot my password</h1>
                     <div class="blue-bottom"></div>
-                    <form class="form" onsubmit="sendEmail(); return false">
+                    <form class="form" onsubmit="sendEmail(); return false" action="https://gruppe-319.developerakademie.net/send_mail/send_mail.php" method="post">
                         <p class="forgotPassword-text">Don't worry! We will send you an email with the instruction to reset your password</p>
                     
                         <div class="login-data">
-                            <input type="text" placeholder="E-mail" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$" required>
+                            <input name="email" type="text" placeholder="E-mail" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$" required>
                         </div>
                     
                         <div class="send-me-btn-container">
