fix login and add task bugs

--- a/login_assets/forgotPassword.html
+++ b/login_assets/forgotPassword.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="login_css/forgotPassword.css">
 
     <script src="../js/template.js"></script>
-    <script src="../js/login.js"></script>
+    <script src="../js/sign_up.js"></script>
 
 </head>
 
