--- a/kanban_assets/help.html
+++ b/kanban_assets/help.html
@@ -75,16 +75,13 @@
 
         <div class="main-field">
             <div class="help-container">
-                <div class="help-arrow-container">
-                    <a href="../summary.html"><img class="arrow" src="../kanban_img/arrow_icons/blue_arrow.png"></a>
-                </div>
-
+                <a href="../summary.html"><img class="arrow position-arrow" src="../kanban_img/arrow_icons/blue_arrow.png"></a>
+        
                 <div class="main-field">
                     <h1>Help</h1>
                     <h2>What is Join?</h2>
                     <p>
-                        Join is a  project  management tool by Emir Salihovic and Alexander Much with a kanban-board. You can organize your tasks whithin a project or business processes. It is perfectly suitable for working together with your team. Join let you and your team work more efficiently. You have all of your taks in focus und
-                        won't miss upcoming deadlines anymore.
+                        Join is a  project  management tool by Emir Salihovic and Alexander Much with a kanban-board. You can organize your tasks whithin a project or business processes. It is perfectly suitable for working together with your team.
                     </p>
                     <h2>How to use it</h2>
                     <table>
