--- a/kanban_assets/legal_notice.html
+++ b/kanban_assets/legal_notice.html
@@ -71,10 +71,8 @@
 
         <div class="main-field">
             <div class="legal-notice">
-                <div class="legal-notice-arrow-container">
-                    <a href="../summary.html"><img class="arrow" src="../kanban_img/arrow_icons/blue_arrow.png"></a>
-                </div>
-
+                
+                <a href="../summary.html"><img class="arrow position-arrow" src="../kanban_img/arrow_icons/blue_arrow.png"></a>
 
                 <div class="main-field">
                     <h1>Legal Notice</h1>
