--- a/board.html
+++ b/board.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="Cache-control" content="no-cache">
-    <title>Join</title>
+    <title>Board</title>
     <link rel="stylesheet" href="login_assets/login_css/fonts.css">
     <link rel="stylesheet" href="login_assets/login_css/login.css">
 
@@ -23,21 +23,31 @@
 
     <style> 
         @media (max-width: 600px) {
-            .kanban-main {
-                height: 75vh;
+        .kanban-main {
+            height: 75vh;
         }
-        @media (max-width: 100vw) {
-            .priority-btn-container a {
-                padding: 5px 5px;
+        .main-field {
+            overflow-y: auto;
+            width: auto;
+        }
+
+        .board-container {
+            width: auto;
+            margin: 0 auto;
+        }
+    }
+
+        @media (max-width: 684px) {
+            .task-form {
+                width: 65%;
             }
-          }
         }
 
         @media (max-width: 874px) {
             #small-add-task {
                 width: 400px;
             }
-                .task-form {
+            .task-form {
                 width: 65%;
             }
             .priority-btn-container a {
@@ -45,11 +55,12 @@
             }
         }
 
-            @media (max-width: 684px) {
-                .task-form {
-                width: 65%;
+        @media (max-width: 100vw) {
+            .priority-btn-container a {
+                padding: 5px 5px;
             }
-        }
+          }
+        
 
     </style>
 
@@ -157,6 +168,9 @@
         </div>
     </div>
 
+    <div id="task-popup" class="popups centered">
+        Task added to board<img class="popups-img" src="kanban_img/small_navbar_icons/white_board.png">
+    </div>
 
 </body>
 
