clean code and implement regex try

--- a/addTask.html
+++ b/addTask.html
@@ -25,6 +25,12 @@
         .priority-btn-container a {
             padding: 5px 5px !important;
         }
+        .task-form-left {
+            width: 60%;
+        }
+        .task-form-right {
+            width: 40%;
+        }
     }
 
         @media (max-width: 684px) {
