login elementes centred

--- a/login.html
+++ b/login.html
@@ -33,8 +33,8 @@
         </div>
     </nav>
 
-    <div class="overlay-container">
-        <div class="login">
+    <div class="overlay-container ">
+        <div class="login centered">
             <div class="login-container">
                 <h1 class="form-headline">Log in</h1>
                 <div class="blue-bottom"></div>
