--- a/login_assets/forgotPassword.html
+++ b/login_assets/forgotPassword.html
@@ -26,7 +26,7 @@
             </div>
         </nav>
 
-        <div class="overlay-container">   
+        <div class="overlay-container centered">   
             <div class="forgotPassword"> 
                 <a href="../login.html">
                     <img class="arrow position-arrow" src="../kanban_img/arrow_icons/blue_arrow.png">
