--- a/login_assets/resetPassword.html
+++ b/login_assets/resetPassword.html
@@ -25,7 +25,7 @@
             </div>
         </nav>
 
-        <div class="overlay-container">
+        <div class="overlay-container centered">
                 <div class="resetPassword">
                     <a href="forgotPassword.html"><img class="arrow position-arrow" src="../kanban_img/arrow_icons/blue_arrow.png"></a>
                 
