--- a/login_assets/signUp.html
+++ b/login_assets/signUp.html
@@ -27,7 +27,7 @@
         </div>
     </nav>
 
-    <div class="overlay-container">
+    <div class="overlay-container centered">
         <div class="signUp">
             <a href="../login.html"><img class="arrow position-arrow" src="../kanban_img/arrow_icons/blue_arrow.png"></a>
             
