fix board and addTask mobile version

--- a/addTask.html
+++ b/addTask.html
@@ -29,11 +29,14 @@
             width: 60%;
         }
         .task-form-right {
-            width: 40%;
+            display: 40%;
         }
     }
 
         @media (max-width: 684px) {
+        .task-form-left {
+            width: 100%;
+        }
         .kanban-navbar {
             display: none !important;
           }
@@ -42,6 +45,9 @@
         }
         .priority-btn-container a {
             padding: 8px 10px;
+        }
+        #textarea {
+            width: 94%;
         }
     }    
         
