add disabling buttons to all

--- a/addTask.html
+++ b/addTask.html
@@ -80,15 +80,13 @@
                 </div>
             </div>
         </div>
-
-        
     </nav>
 
     
 
     <nav class="mobile-create-task-navbar">
         <img class="mobile-logo-blue" src="kanban_img/login_icons/join_blue.png">
-        <button onclick="saveTask()" class="create-btn create-btn-mobile">Create <img class="white-clear" src="kanban_img/clear_icons/white_clear.png"></button>
+        <button onclick="saveTask()" class="create-btn-mobile">Create <img class="white-clear" src="kanban_img/clear_icons/white_clear.png"></button>
     </nav>
 
 
