--- a/addTask.html
+++ b/addTask.html
@@ -110,7 +110,7 @@
         <div class="main-field">
             <div class="add-task-container">
                 <div class="task-form-left">
-                    <form onkeyup="enableButton('create-btn')" class="task-form">
+                    <form onkeyup="enableButton('.create-btn')" class="task-form">
                         <input id="input-title" class="input-title" type="text" placeholder="Enter a title" required>
 
                         <div class="contacts-container">
