--- a/contacts.html
+++ b/contacts.html
@@ -135,8 +135,12 @@
 
     </div>
 
-    <div id="task-popup" class="popups centered d-none">
+    <div id="contact-popup" class="popups centered d-none">
         Contact succesfully created 
+    </div>
+
+    <div id="task-popup" class="popups centered">
+        Task added to Board <img class="popups-img" src="kanban_img/small_navbar_icons/white_board.png">
     </div>
     
 </body>
