--- a/summary.html
+++ b/summary.html
@@ -20,13 +20,19 @@
         .main-field {
             display: flex;
         }
+        .blue-text {
+                font-size: 12px !important;
+                margin-top: 5px;
+        }
         
         }   
 
         @media (max-width: 600px) {
             .kanban-main {
                 height: 75vh;
+                overflow-y: auto;
             }
+            
         }
     </style>
 
