--- a/contacts.html
+++ b/contacts.html
@@ -58,14 +58,15 @@
 
     </style>
 
-    <script src="js/request.js" defer></script>
+    <script src="js/kanban/functionalities.js" defer></script>
+    <script src="js/kanban/request.js" defer></script>
     <script src="js/template.js" defer></script> 
     <script src="js/mini_backend.js"></script>
-    <script src="js/render.js" defer></script>
-    <script src="js/load.js" defer></script>
-    <script src="js/logout.js" defer></script>
-    <script src="js/custom-select.js" defer></script>
-    <script src="js/task.js" defer></script>
+    <script src="js/kanban/render.js" defer></script>
+    <script src="js/kanban/load.js" defer></script>
+    <script src="js/login/logout.js" defer></script>
+    <script src="js/kanban/custom-select.js" defer></script>
+    <script src="js/kanban/task.js" defer></script>
     
 </head>
 
