--- a/kanban_assets/help.html
+++ b/kanban_assets/help.html
@@ -31,13 +31,13 @@
     }
     </style>
 
-    <script src="../js/request.js" defer></script>
+    <script src="../js/kanban/request.js" defer></script>
     <script src="../js/template.js" defer></script>
-    <script src="../js/load.js" defer></script>
-    <script src="../js/render.js" defer></script>
+    <script src="../js/kanban/load.js" defer></script>
+    <script src="../js/kanban/render.js" defer></script>
     <script src="../js/mini_backend.js"></script>
-    <script src="../js/login.js" defer></script>
-    <script src="../js/logout.js" defer></script>
+    <script src="../js/login/login.js" defer></script>
+    <script src="../js/login/logout.js" defer></script>
 
 </head>
 
