--- a/kanban_assets/legal_notice.html
+++ b/kanban_assets/legal_notice.html
@@ -16,13 +16,13 @@
 
     <link rel="shortcut icon" href="../kanban_img/login_icons/join_blue.png" type="image/x-icon">
 
-    <script src="../js/request.js" defer></script>
+    <script src="../js/kanban/request.js" defer></script>
     <script src="../js/template.js" defer></script>
-    <script src="../js/load.js" defer></script>
-    <script src="../js/render.js" defer></script>
+    <script src="../js/kanban/load.js" defer></script>
+    <script src="../js/kanban/render.js" defer></script>
     <script src="../js/mini_backend.js"></script>
     <!-- <script src="../js/login.js" defer></script> -->
-    <script src="../js/logout.js" defer></script>
+    <script src="../js/login/logout.js" defer></script>
 
     <style>
          @media (max-width: 874px) {
