--- a/login.html
+++ b/login.html
@@ -15,11 +15,11 @@
 
     <link rel="shortcut icon" href="kanban_img/login_icons/join_blue.png" type="image/x-icon">
 
-    <script src="js/request.js" defer></script>
+    <script src="js/kanban/request.js" defer></script>
     <script src="js/template.js" defer></script>
     <script src="js/mini_backend.js"></script>
-    <script src="js/load.js" defer></script>
-    <script src="js/login.js" defer></script>
+    <script src="js/kanbanload.js" defer></script>
+    <script src="js/login/login.js" defer></script>
 </head>
 
 <body id="login-body">
