remove console.log and little bugs

--- a/kanban_assets/legal_notice.html
+++ b/kanban_assets/legal_notice.html
@@ -16,6 +16,7 @@
 
     <link rel="shortcut icon" href="../kanban_img/login_icons/join_blue.png" type="image/x-icon">
 
+    <script src="../js/kanban/functionalities.js" defer></script>
     <script src="../js/kanban/request.js" defer></script>
     <script src="../js/template.js" defer></script>
     <script src="../js/kanban/load.js" defer></script>
