--- a/login.html
+++ b/login.html
@@ -7,18 +7,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="Cache-control" content="no-cache">
     <title>Log in</title>
-    <link rel="shortcut icon" href="kanban_img/login_logos/join_blue.png" type="image/x-icon">
+    <link rel="shortcut icon" href="kanban_img/login_icons/join_blue.png" type="image/x-icon">
 
     <link rel="stylesheet" href="login_assets/login_css/generalForm.css">
     <link rel="stylesheet" href="login_assets/login_css/fonts.css">
     <link rel="stylesheet" href="login_assets/login_css/login.css">
 
-    <link rel="shortcut icon" href="kanban_img/login_icons/join_blue.png" type="image/x-icon">
 
     <script src="js/kanban/request.js" defer></script>
     <script src="js/template.js" defer></script>
     <script src="js/mini_backend.js"></script>
-    <script src="js/kanbanload.js" defer></script>
+    <script src="js/kanban/load.js" defer></script>
     <script src="js/login/login.js" defer></script>
 </head>
 
