fix reseting password

--- a/login_assets/signUp.html
+++ b/login_assets/signUp.html
@@ -13,10 +13,10 @@
     <link rel="stylesheet" href="login_css/login.css">
     <link rel="stylesheet" href="login_css/signUp.css">
 
-    <script src="../js/request.js" defer></script>
+    <script src="../js/kanban/request.js" defer></script>
     <script src="../js/mini_backend.js"></script>
-    <script src="../js/load.js" defer></script>
-    <script src="../js/sign_up.js" defer></script>
+    <script src="../js/kanban/load.js" defer></script>
+    <script src="../js/login/sign_up.js" defer></script>
 
 </head>
 
